# flights

./: .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  on-demand.yml  reports.yml
data/: rair.joblib  wair.joblib
docs/: index.md
docs/reports/: flights-2026-02-01-2026-03-04--1000--1-7.md  flights-test-no-srcs-dsts.md  flights-test.md  index.html
docs/stylesheets/: extra.css
examples/: report-config-explained.yaml  report-config.json  report-config.yaml  test-no-srcs-dsts.json  test.json  test_no_srcs_dsts.json
helm/flights/: Chart.yaml  values.yaml
helm/flights/templates/: cron-workflow.yaml  external-secrets.yaml  rbac.yaml  workflow-template.yaml
reports/: flights-2026-02-01-2026-03-04--1000--1-7.md  flights-test-no-srcs-dsts.md  flights-test.md  flights__2025-11-07_2025-12-31__1000__1_8.md  flights__2026-02-01_2026-02-25__1000__1_7.md  flights__2026-02-01_2026-03-04__1000__1_7.md  flights__2026-02-01_2026-03-04__1000__2_3.md
src/flights/: cli.py  config.py
src/flights/crawlers/rair/: __init__.py  config.py  crawl.py
src/flights/crawlers/wair/: __init__.py  config.py  crawl.py
src/flights/reporting/: config.py  report.py
src/flights/reporting/templates/: report-mkdocs.md.j2  report.md.j2  report_html_table.md.j2
tools/: actions_curl_config.py
