[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flights"
version = "0.1.0"
description = "Flights"
requires-python = ">=3.12"
dependencies = [
    "pyyaml", 
    "requests", 
    "pandas", 
    "jinja2", 
    "joblib",
    "prometheus_client",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "mkdocs",
    "mkdocs-material",
    "types-pyyaml",
    "types-requests",
    # "types-pandas",
    "types-jinja2",
    # "docformatter",
]

[project.scripts]
flights = "flights.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -------------------
# Formatting
# -------------------

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
